# Advent-of-Code-2023

./: .gitignore  .hindent.yaml  README.md  aoc-2023.cabal  runSolutions.sh
day01/: Main.hs  Part1.hs  Part2.hs  TextToNumber.hs
day02/: CubeSample.hs  Game.hs  Main.hs
day03/: Engine.hs  EngineIndicator.hs  EngineNumber.hs  Gear.hs  Main.hs
day04/: Card.hs  ClonedCard.hs  Main.hs
day05/: Main.hs  Range.hs  RangeMapper.hs  RangeMappers.hs
day06/: Main.hs  Race.hs
day07/: Bid.hs  Card.hs  Hand.hs  JokerOrd.hs  Main.hs
day08/: DesertMap.hs  Direction.hs  JourneyState.hs  Junction.hs  Main.hs
day09/: History.hs  Main.hs
day10/: Main.hs  Pipe.hs  PipeMap.hs  Polygon.hs
day11/: Main.hs  Universe.hs
day12/: Main.hs  Record.hs  RowData.hs
day13/: GroundElement.hs  Main.hs  MirrorData.hs  MirrorEq.hs  Pattern.hs
day14/: CycledList.hs  Main.hs  PlatformContext.hs  RockContainers.hs
day15/: Box.hs  Boxes.hs  Instruction.hs  Main.hs
day16/: Cave.hs  LightBeam.hs  LightDeflector.hs  Main.hs
day17/: City.hs  Main.hs  Node.hs  OutgoingPath.hs  SearchContext.hs
day18/: Main.hs  Polygon.hs  TrenchInstruction.hs
day19/: Main.hs  Part.hs  Range.hs  Workflow.hs  WorkflowItem.hs  WorkflowTree.hs
day20/: CircuitContext.hs  Main.hs  Module.hs  Signal.hs
day21/: Calculations.hs  Main.hs  RockGarden.hs
day22/: Brick.hs  FallenBricks.hs  Main.hs  SettledBrick.hs  VerticalSlice.hs
day23/: Graph.hs  Hike.hs  HikingElement.hs  HikingMap.hs  Main.hs
day24/: HailStone.hs  Main.hs  Vector.hs
day25/: Graph.hs  Main.hs  MinCutFinder.hs
utils/: Coordinate.hs  Direction.hs  Grid.hs  Parsers.hs  ProcessFile.hs
