cabal-version:      3.0
name:               aoc2023
version:            0.1.0.0
author:             Jetze Zoethout
maintainer:         jzoethout@sogyo.nl
build-type:         Simple

common common
    ghc-options: -O2 -Wall
    default-extensions:   RecordWildCards
                        , TypeApplications
                        , OverloadedStrings
                        , OverloadedRecordDot
                        , InstanceSigs
                        , GeneralizedNewtypeDeriving
                        , TupleSections
                        , LambdaCase
                        , BangPatterns
    build-depends:    base ^>=4.17.2.0
                    , text
                    , split
                    , containers
                    , mtl
                    , vector
                    , PSQueue
    default-language: Haskell2010

library utils
    import:           common
    exposed-modules:  ProcessFile
                    , Parsers
                    , Coordinate
                    , TaggedRow
                    , Direction
                    , Grid
    hs-source-dirs:   utils

executable day25
    import:           common
    main-is:          Main.hs
    other-modules:    Graph
                    , MinCutFinder
    build-depends:    utils
    hs-source-dirs:   day25

executable day24
    import:           common
    main-is:          Main.hs
    other-modules:    Vector
                    , HailStone
    build-depends:    utils
    hs-source-dirs:   day24

executable day23
    import:           common
    main-is:          Main.hs
    other-modules:    HikingElement
                    , HikingMap
                    , Graph
                    , Hike
    build-depends:    utils
    hs-source-dirs:   day23

executable day22
    import:           common
    main-is:          Main.hs
    other-modules:    Brick
                    , SettledBrick
                    , VerticalSlice
                    , FallenBricks
    build-depends:    utils
    hs-source-dirs:   day22

executable day21
    import:           common
    main-is:          Main.hs
    other-modules:    RockGarden
                    , Calculations
    build-depends:    utils
    hs-source-dirs:   day21

executable day20
    import:           common
    main-is:          Main.hs
    other-modules:    Signal
                    , Module
                    , CircuitContext
    build-depends:    utils
    hs-source-dirs:   day20

executable day19
    import:           common
    main-is:          Main.hs
    other-modules:    Part
                    , WorkflowItem
                    , Workflow
                    , WorkflowTree
                    , Range
    build-depends:    utils
    hs-source-dirs:   day19

executable day18
    import:           common
    main-is:          Main.hs
    other-modules:    TrenchInstruction
                    , Polygon
    build-depends:    utils
    hs-source-dirs:   day18

executable day17
    import:           common
    main-is:          Main.hs
    other-modules:    City
                    , Node
                    , OutgoingPath
                    , SearchContext
    build-depends:    utils
    hs-source-dirs:   day17

executable day16
    import:           common
    main-is:          Main.hs
    other-modules:    LightDeflector
                    , Cave
                    , LightBeam
    build-depends:    utils
    hs-source-dirs:   day16

executable day15
    import:           common
    main-is:          Main.hs
    other-modules:    Instruction
                    , Box
                    , Boxes
    build-depends:    utils
    hs-source-dirs:   day15

executable day14
    import:           common
    main-is:          Main.hs
    other-modules:    CycledList
                    , RockContainers
                    , PlatformContext
    build-depends:    utils
    hs-source-dirs:   day14

executable day13
    import:           common
    main-is:          Main.hs
    other-modules:    Pattern
                    , GroundElement
                    , MirrorEq
                    , MirrorData
    build-depends:    utils
    hs-source-dirs:   day13

executable day12
    import:           common
    main-is:          Main.hs
    other-modules:    Record
                    , RowData
                    , Cached
    build-depends:    utils
    hs-source-dirs:   day12

executable day11
    import:           common
    main-is:          Main.hs
    other-modules:    Universe
    build-depends:    utils
    hs-source-dirs:   day11

executable day10
    import:           common
    main-is:          Main.hs
    other-modules:    Pipe
                    , PipeMap
                    , Polygon
    build-depends:    utils
    hs-source-dirs:   day10

executable day09
    import:           common
    main-is:          Main.hs
    other-modules:    History
    build-depends:    utils
    hs-source-dirs:   day09

executable day08
    import:           common
    main-is:          Main.hs
    other-modules:    Direction
                    , Junction
                    , JourneyState
                    , DesertMap
    build-depends:    utils
    hs-source-dirs:   day08

executable day07
    import:           common
    main-is:          Main.hs
    other-modules:    Card
                    , Hand
                    , Bid
                    , JokerOrd
    build-depends:    utils
    hs-source-dirs:   day07

executable day06
    import:           common
    main-is:          Main.hs
    other-modules:    Race
    build-depends:    utils
    hs-source-dirs:   day06

executable day05
    import:           common
    main-is:          Main.hs
    other-modules:    RangeMapper
                    , RangeMappers
                    , Range
    build-depends:    utils
    hs-source-dirs:   day05

executable day04
    import:           common
    main-is:          Main.hs
    other-modules:    Card
                    , ClonedCard
    build-depends:    utils
    hs-source-dirs:   day04

executable day03
    import:           common
    main-is:          Main.hs
    other-modules:    Engine
                    , EngineNumber
                    , EngineIndicator
                    , Gear
    build-depends:    utils
    hs-source-dirs:   day03

executable day02
    import:           common
    main-is:          Main.hs
    other-modules:    CubeSample
                    , Game
    build-depends:    utils
    hs-source-dirs:   day02
   
executable day01
    import:           common
    main-is:          Main.hs
    other-modules:    TextToNumber
                    , Part1
                    , Part2
    build-depends:    utils
    hs-source-dirs:   day01
